Fix overlap

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -286,3 +286,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 background-attachment: fixed;
 background-size: cover;
   }
+
+  .noMarginY{
+    margin-right: 0;
+    margin-left: 0;
+  }
